--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "description": "",
     "main": "api/index.js",
     "scripts": {
-     "start": "node api/index.js"
+        "start": "node api/index.js"
     },
     "dependencies": {
-     "express": "^4.18.2"
+        "express": "^4.19.2",
+        "handlebars": "^4.7.8"
     }
-   }
+}
