--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node api/index.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.19.2",
         "handlebars": "^4.7.8"
     }
