--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "handlebars": "^4.7.8"
+    },
+    "devDependencies": {
+        "vercel": "^33.7.0"
     }
 }
